--- a/wallet-service/pom.xml
+++ b/wallet-service/pom.xml
@@ -43,6 +43,10 @@
 
 		<!-- JDBC deps -->
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>	
@@ -52,6 +56,12 @@
 		    <scope>runtime</scope>		    
 		</dependency>
 		
+		<!-- Utilities -->	
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>
+
 		<!-- Swagger doc deps -->
 		<dependency>
 			<groupId>io.springfox</groupId>
